--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
     <nav id="main-nav">
         <div class="container">
-            <img src="img/logo.png" alt="NewGrid" class="logo">
+                <!-- <a href="./index.html">
+
+                </a> -->
+                    <img src="img/logo.png" alt="NewGrid" class="logo">
             <!-- social media icons -->
             <div class="social" >
                 <a href="http://facebook.com" target="_blank" ><i class="fab fa-facebook" fa-2x></i></a>
